new parsed args design